--- a/property_details.html
+++ b/property_details.html
@@ -94,55 +94,64 @@
 
 
     <!-- about us start here -->
-    <div class="container">
+    <!-- About Us Start Here -->
+<section class="py-5 bg-light">
+  <div class="container">
+    <div class="row align-items-center">
+      
+      <!-- Carousel Column -->
+      <section class="py-5">
+  <div class="container">
+    <div class="row align-items-center">
 
-        <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="..." class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="img/commercial/comm1.jpeg" class="d-block w-100" alt="..." style="height: 180px; width: 100px;">
-    </div>
-    <div class="carousel-item">
-      <img src="img/commercial/comm2.jpeg" class="d-block w-100" alt="..." style="height: 120px; width: 100p;">
+      <!-- Carousel Column -->
+      <div class="col-md-6">
+        <div id="carouselCardSide" class="carousel slide shadow-sm" data-bs-ride="carousel">
+          <div class="carousel-inner rounded">
+            <div class="carousel-item active" style="height: 280px;">
+              <img src="img/toilet/room1.jpeg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item" style="height: 280px;">
+              <img src="img/toilet/toilet1.jpeg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item" style="height: 280px;">
+              <img src="img/toilet/toilet4.jpeg" class="d-block w-100" alt="...">
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselCardSide" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselCardSide" data-bs-slide="next">
+            <span class="carousel-control-next-icon"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
+
+      <!-- Card Column -->
+      <div class="col-md-6">
+        <div class="card shadow-sm">
+          <div class="card-body">
+            <h5 class="card-title">Joe's Exclusive Homes</h5>
+            <p class="card-text">
+              At Joe's Exclusive Homes, we specialize in helping individuals and families find not just houses—but homes.
+              With a commitment to integrity, personalized service, and deep local market knowledge, we provide expert
+              guidance in buying, selling, and investing in real estate.
+            </p>
+            <p class="card-text">
+              Whether you're a first-time buyer or seasoned investor, we’re here to support your next move with confidence.
+            </p>
+            <a href="#" class="btn btn-primary">Explore Listings</a>
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
+</section>
 
-                <div class="col-md-7">
-                    <div class="card-body">
-                        <h5 class="card-title">Joe's Exclusive Homes</h5>
-                        <p class="card-text">At Joe's Exclusive Home, we specialize in helping individuals and families
-                            find not just houses—but homes. With a commitment to integrity, personalized service, and
-                            deep local market knowledge, we provide expert guidance in buying, selling, and investing in
-                            real estate.
-
-                            Whether you're a first-time buyer, a seasoned investor, or looking to sell your property,
-                            our dedicated team is here to support you every step of the way. We pride ourselves on
-                            building lasting relationships and delivering results that exceed expectations.
-
-                            Let us help you make your next move with confidence.</p>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
     <!-- about us ends here -->
-
-
-
-
-
     <!-- about us start here -->
     <div style="background-color: #F5FAFF; padding-bottom: 50px; margin-top: 100px;">
         <div class="container">
